# psm4cfd

./: .travis.yml  LICENSE  Readme.md
.github/workflows/: 01.yml  demo01.yml  demo01_03.yml
01_2D_VE_doublyperiodic/: CMakeLists.txt  Readme.md  execute.sh  main.F90
01_2d_VE_doublyperiodic/: .travis.yml
02_3D_VE_triplyperiodic/: main.F90
demo/01_2D_VE_KHinstability/: .arrays_2D_VE_DP.F90.swp  .fft2d_mkl.F90.swp  .flowfield_2D_VE_DP.F90.swp  .initial_flowfield_demo01.F90.swp  .main.F90.swp  CI.sh  CMakeLists.txt  Readme.md  arrays_2D_VE_DP.F90  compile.sh  constants_demo01.F90  execute.sh  fft2d_mkl.F90  flowfield_2D_VE_DP.F90  initial_flowfield_demo01.F90  main.F90  main_demo01.F90  output_2D.F90  output_plot3d_2D.F90  sort_spectral_coefficients.F90  time_integration_2D_VE_DP.F90
demo/02_2D_VE_VortexCoalescence/: CI.sh  CMakeLists.txt  Readme.md  constants_demo02.F90  initial_flowfield_demo02.F90  main_demo02.F90
demo/03_2D_VE_HomogeniousTurbulence/: CMakeLists.txt  Readme.md  constants_demo03.F90  initial_flowfield_demo03.F90  main_demo03.F90
sandbox/01_2D_VE_doublyperiodic/: Readme.md  compile.sh  main.F90
sandbox/02_3D_VE_triplyperiodic/large/: CMakeLists.txt  main.F90
sandbox/2dsolver/: CMakeLists.txt  initial_flowfield_demo03.F90
source/: arrays_2D_VE_DP.F90  fft2d_mkl.F90  output_2D_VE_DP.F90  sort_spectral_coefficients.F90  time_integration_2D_VE_DP.F90  velocity_2D_VE_DP.F90
